--- a/cpp/cpp.vcxproj.filters
+++ b/cpp/cpp.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="data_struct_vector_list.cpp">
+    <ClCompile Include="avl_binary_tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
