--- a/Chat/Chat/Chat.vcxproj.filters
+++ b/Chat/Chat/Chat.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Data.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MainChatDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chat.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MainChatDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
